--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "country-state-city": "^3.2.1",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "i18n-iso-countries": "^7.14.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
