--- a/admin/cargo/package.json
+++ b/admin/cargo/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "cargo",
+  "name": "cargo-admin",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
     "axios": "^1.11.0",
     "country-state-city": "^3.2.1",
     "leaflet": "^1.9.4",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5",
@@ -22,14 +22,11 @@
     "world-countries": "^5.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
+    "vite": "^7.1.2",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
+    "@eslint/js": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^7.1.2"
+    "eslint-plugin-react-refresh": "^0.4.20"
   }
 }
